add nansum, can work on cpu, fail on cuda

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -299,6 +299,11 @@
   ]
   bind_python: True
 
+- name: "reduce_nansum"
+  signature: 
+    "Tensor (Tensor x, Int32List[1] dim, Bool keepdim=False) => ReduceNanSum"
+  bind_python: True
+
 - name: "reduce_mean"
   signature: [
     "Tensor (Tensor x, Int32List[1] dim, Bool keepdim=False) => ReduceMean",
