launch oneflow kernels in code generated with MLIR (#8980)
* init

* registry

* add KernelLaunchFunctionPass

* pass ninja and relu test

* mlir test script & lowering

* relu py

* fi

* kernel launch

* fix

* fix op and pass interfaces

* add comment

* add readme docs

* fix typo

* kenerl launch function pass is done

* use template and rename func.func

* declare

* pass string through mlir.llvm dialect to c interface:
llvm.mlir.global internal constant @"relu-0_var"("relu-0")
%0 = "llvm.mlir.addressof"() {global_name = @"relu-0_var"} : () -> !llvm.ptr<array<6 x i8>>
%1 = "llvm.mlir.constant"() {value = 0 : index} : () -> i64
%2 = "llvm.getelementptr"(%0, %1, %1) {structIndices = dense<-2147483648> : tensor<2xi32>} : (!llvm.ptr<array<6 x i8>>, i64, i64) -> !llvm.ptr<i8>

* use symbol table

* use oneflow variable op

* fix symboltable

* fix

* ninja c1 check

* split into kernel-launch-function pass and kernel-launch-with-llvm pass

* restore pass 1

* Gen kernel example (#9042)

* add example

* add todo

* add basic assertion

* add file check

* create pass in translation

* sanitizeIdentifier

* enable print

* fix

* update test file

* kernel llvm pass is ok

* pass ctx ptr to func and this ptr will be an operand to call c interface function

* restore llvm ptr type to llvm.ptr<i8>

* Kernel lookup in launch op (#9059)

* add

* move function to another unit

* create map

* add iter

* impl TensorDesc4ArgNameAndIndex

* set dev tag

* load lib when ONEFLOW_MLIR_FUSE_KERNEL_LAUNCH is set

* sharedlibs enables and pass enables in commpute

* enable c interface callee

* impl todo

* naming

* rm

* add invalid

* fix invoke arg

* typed

* rm log

* rename pass

* Update user_op_kernel_registry.h

* Update user_op_kernel_registry.h

* Update OneFlowOps.td

* Update Passes.cpp

* add comp ctx

* add todo

* refine todo

* refact

--- a/oneflow/ir/oneflow-extension/CMakeLists.txt
+++ b/oneflow/ir/oneflow-extension/CMakeLists.txt
@@ -1,10 +1,13 @@
 oneflow_add_mlir_library(
   MLIROneFlowExtension
-  extension.cpp
   mlir_jit_op.cpp
+  mlir_jit_op_infer.cpp
+  mlir_jit_op_kernel.cpp
+  kernel_launch_op.cpp
   ir_pass.cpp
   lr_jit.cpp
   mlir_gen.cpp
+  jit_engine.cpp
   DEPENDS
   LINK_LIBS
   PUBLIC
