implement multinomial functor and cpu kernel

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2747,6 +2747,10 @@
   signature: "Tensor (Tensor x, Float lambd=1.0, Generator generator=None) => Exponential"
   bind_python: True
 
+- name: "multinomial"
+  signature: "Tensor (Tensor x, Int32 num_samples, Bool replacement=False, Generator generator=None) => Multinomial"
+  bind_python: True
+
 - name: "max_pool_grad_grad"  
   signature: "Tensor (Tensor dydx, Tensor indices, Int32 ndims) =>  MaxPoolNdGradGrad" 
   bind_python: False
