--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false && github.base_ref == 'master' && contains(github.event.pull_request.requested_reviewers.*.login, 'oneflow-ci-bot')
     steps:
-      - uses: Oneflow-Inc/get-oneflow/priority-pr@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/priority-pr@support-pr-sym-link
         name: Check priority PR closed
         id: save-cache
         timeout-minutes: 5
@@ -163,7 +163,7 @@ jobs:
           fi
           echo "is_secrets_accessible=1" >> $GITHUB_ENV
       - name: Wait for GPU slot
-        uses: Oneflow-Inc/get-oneflow/wait-for-gpu@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/wait-for-gpu@support-pr-sym-link
         if: env.is_secrets_accessible == '1'
         timeout-minutes: 90
         continue-on-error: true
@@ -187,7 +187,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/build@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/build@support-pr-sym-link
         name: find cache
         id: find-cache
         timeout-minutes: 5
@@ -234,7 +234,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-pr-sym-link
         name: Save cache if successful
         id: save-cache
         timeout-minutes: 5
@@ -248,7 +248,7 @@ jobs:
         run: |
           echo "::error file=test.yml,line=204,col=10::steps.save-cache.outputs.cache-hit != matrix.cache-hit"
           exit 1
-      - uses: Oneflow-Inc/get-oneflow@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow@support-pr-sym-link
         name: Build manylinux ${{ matrix.entry }}
         id: build-cpu
         if: ${{ matrix.entry =='cpu' && !matrix.cache-hit }}
@@ -270,7 +270,7 @@ jobs:
           python-versions: |
             3.7
             3.8
-      - uses: Oneflow-Inc/get-oneflow@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow@support-pr-sym-link
         name: Build manylinux ${{ matrix.entry }}
         id: build-cuda
         if: ${{ matrix.entry =='cu102' && !matrix.cache-hit }}
@@ -290,7 +290,7 @@ jobs:
           clean-ccache: ${{ contains(github.event.pull_request.labels.*.name, 'need-clean-ccache') }}
           python-versions: |
             3.7
-      - uses: Oneflow-Inc/get-oneflow@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow@support-pr-sym-link
         name: Build ${{ matrix.entry }}
         if: ${{ matrix.entry == 'llvm13' && !matrix.cache-hit }}
         with:
@@ -329,7 +329,7 @@ jobs:
             })
       - name: Upload packed liboneflow
         if: ${{ !fromJson(matrix.cache-hit) && matrix.entry != 'llvm13' && matrix.entry != 'cu102_xla' }}
-        uses: Oneflow-Inc/get-oneflow/digest/upload@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/digest/upload@support-pr-sym-link
         timeout-minutes: 10
         with:
           digest: ${{ steps.save-cache.outputs.build-digest }}
@@ -340,7 +340,7 @@ jobs:
           dst-dir: cpack
       - name: Upload whl
         if: ${{ !fromJson(matrix.cache-hit) && matrix.entry != 'llvm13' && matrix.entry != 'cu102_xla' }}
-        uses: Oneflow-Inc/get-oneflow/digest/upload@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/digest/upload@support-pr-sym-link
         timeout-minutes: 10
         with:
           digest: ${{ steps.save-cache.outputs.build-digest }}
@@ -366,7 +366,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/test@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/test@support-pr-sym-link
         name: find cache
         id: find-cache
         timeout-minutes: 5
@@ -397,7 +397,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/test@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete/matrix/test@support-pr-sym-link
         name: find cache
         id: find-cache
         timeout-minutes: 5
@@ -473,7 +473,7 @@ jobs:
         if: ${{ contains(matrix.runs-on, 'self-hosted') }}
         run: |
           docker rm -f ${{ env.TEST_CONTAINER_NAME }} || true
-      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-pr-sym-link
         name: Save cache if successful
         id: save-cache
         timeout-minutes: 5
@@ -489,7 +489,7 @@ jobs:
           exit 1
       - name: Download wheel and packed liboneflow
         if: ${{ !fromJson(matrix.cache-hit) && contains(matrix.runs-on, 'self-hosted') }}
-        uses: Oneflow-Inc/get-oneflow/digest/download@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/digest/download@support-pr-sym-link
         id: download-digest
         timeout-minutes: 10
         with:
@@ -499,7 +499,7 @@ jobs:
           ssh-tank-path: ${{ env.SSH_TANK_PATH }}
       - name: Get primary node
         if: ${{ !fromJson(matrix.cache-hit) && contains(matrix.runs-on, 'self-hosted') }}
-        uses: Oneflow-Inc/get-oneflow/master-address@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/master-address@support-pr-sym-link
         id: get-primary-node
         with:
           rank: ${{ matrix.rank }}
@@ -690,7 +690,7 @@ jobs:
         if: ${{ contains(matrix.runs-on, 'self-hosted') }}
         run: |
           docker rm -f ${{ env.TEST_MANYLINUX_CONTAINER_NAME }} || true
-      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-pr-sym-link
         name: Save cache if successful
         id: save-cache
         timeout-minutes: 5
@@ -706,7 +706,7 @@ jobs:
           exit 1
       - name: Download wheel and packed liboneflow
         if: ${{ !fromJson(matrix.cache-hit) && contains(matrix.runs-on, 'self-hosted') }}
-        uses: Oneflow-Inc/get-oneflow/digest/download@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/digest/download@support-pr-sym-link
         id: download-digest
         timeout-minutes: 10
         with:
@@ -982,7 +982,7 @@ jobs:
       - name: Benchmark Test
         timeout-minutes: 100
         if: ${{ !fromJson(matrix.cache-hit) && matrix.test-type == 'benchmark' && matrix.device == 'cuda' }}
-        uses: Oneflow-Inc/get-oneflow/pytest-benchmark@support-iree-ci
+        uses: Oneflow-Inc/get-oneflow/pytest-benchmark@support-pr-sym-link
         with:
           collect-path: ${{ env.FLOW_VISION_SRC }}/benchmark
           container-name: ${{ env.TEST_CONTAINER_NAME }}
@@ -1044,7 +1044,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
           fetch-depth: 0
-      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/cache-complete@support-pr-sym-link
         name: Save cache if successful
         id: save-cache
         timeout-minutes: 5
