--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Checkout Oneflow-Inc/oneflow
         if: ${{ github.event.inputs.oneflow-ref == '' }}
         uses: actions/checkout@v2
-      - uses: Oneflow-Inc/get-oneflow@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow@support-pr-sym-link
         name: Build manylinux
         id: build-cuda
         with:
