--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -15,6 +15,6 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: Oneflow-Inc/get-oneflow/update-benchmark-history@support-iree-ci
+      - uses: Oneflow-Inc/get-oneflow/update-benchmark-history@support-pr-sym-link
         name: Update benchmark history
         timeout-minutes: 10
