--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1264,7 +1264,7 @@
   bind_python: true
 
 - name: "masked_fill"
-  signature: "Tensor (Tensor x, Tensor mask, Scalar value) => MaskedFill"
+  signature: "Tensor (Tensor x, Tensor mask, Scalar value, Bool inplace=False) => MaskedFill"
   bind_python: true
 
 - name: "movedim"
