--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1264,11 +1264,11 @@
   bind_python: true
 
 - name: "masked_fill"
-  signature: "Tensor (Tensor x, Tensor mask, Scalar value) => MaskedFill"
+  signature: "Tensor (Tensor input, Tensor mask, Scalar value) => MaskedFill"
   bind_python: true
 
 - name: "masked_fill_"
-  signature: "Tensor (Tensor x, Tensor mask, Scalar value) => MaskedFillInplace"
+  signature: "Tensor (Tensor input, Tensor mask, Scalar value) => MaskedFillInplace"
   bind_python: true
 
 - name: "movedim"
