--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1827,6 +1827,10 @@
   signature: "Tensor (Tensor x) => Inv"
   bind_python: True
 
+- name: "linalg_cross"
+  signature: "Tensor (Tensor input, Tensor other, Int64 dim=None) => LinalgCross"
+  bind_python: True
+
 - name: "dropout"
   signature: "Tensor (Tensor input, Float p=0.5, Bool training=True, Bool inplace=False, Generator generator=None, *, Tensor addend=None) => Dropout"
   bind_python: True
