Inplace masked fill (#9133)
* add inpalce masked_fill

* reformat

* refine

* auto format by CI

* refine according by comments of hbb

* export via cpp directly

* export oneflow.masked_fill_

* rename arg

* refine test case

Co-authored-by: oneflow-ci-bot <ci-bot@oneflow.org>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1266,7 +1266,11 @@
   bind_python: true
 
 - name: "masked_fill"
-  signature: "Tensor (Tensor x, Tensor mask, Scalar value) => MaskedFill"
+  signature: "Tensor (Tensor input, Tensor mask, Scalar value) => MaskedFill"
+  bind_python: true
+
+- name: "masked_fill_"
+  signature: "Tensor (Tensor input, Tensor mask, Scalar value) => MaskedFillInplace"
   bind_python: true
 
 - name: "movedim"
