feat: global `import torch as oneflow`

--- a/python/.gitignore
+++ b/python/.gitignore
@@ -132,6 +132,7 @@ dmypy.json
 /oneflow/core
 /oneflow/compatible/single_client/core
 /oneflow/version.py
+/oneflow/oneflow_tmp
 lib.py
 *.ast.py
 unittest-log-*
