add docs, use atomic add in cuda kernel, add unittest

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2806,5 +2806,5 @@
   bind_python: False
 
 - name: "bincount"
-  signature: "Tensor (Tensor x, Tensor weight=None) => BinCount"
+  signature: "Tensor (Tensor x, Tensor weights=None) => BinCount"
   bind_python: True
