regis gumbel_softmax

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -668,6 +668,10 @@
   signature: "Tensor (Tensor dy, Tensor y) => SoftmaxGrad"
   bind_python: False
 
+- name: "gumbel_softmax"
+  signature: "Tensor (Tensor x, Double tau=1.) => GumbelSoftmax"
+  bind_python: True
+
 - name: "log_softmax"
   signature: "Tensor (Tensor x, Int64 dim=None) => LogSoftmax"
   bind_python: True
